src/objects/Procedure__c.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Procedure__c</fullName>
        <label>Date Of Procedure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Form_Name__c</fullName>
        <label>Form Name</label>
        <picklist>
            <picklistValues>
                <fullName>Breast Surgical Procedure Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Study Pathology Form(Positive Breast Biopsies)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Study Pathology Form(Lymph Node Biopsies)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Surgery Summary Form</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Laterality__c</fullName>
        <label>Laterality</label>
        <picklist>
            <controllingField>Procedure_Name__c</controllingField>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <controllingField>Procedure_Name__c</controllingField>
            <picklistValues>
                <fullName>Unknown/Not indicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper inner quadrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper outer quadrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower inner quadrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower outer quadrant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axillary tail of breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overlapping lesion of breast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subareolar region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nipple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axillary (lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraclavicular (lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal mammary (lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supraclavicular (lymph node)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MRI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MRI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mammography__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mammography</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Node_Result__c</fullName>
        <label>Node Result</label>
        <picklist>
            <picklistValues>
                <fullName>Positive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Node_Type__c</fullName>
        <label>Node Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown/Not Indicated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axillary (Lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infraclavicular (Lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Mammary (Lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supraclavicular (Lymph node)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>On_Study_Pathology_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>On-Study Pathology Form</label>
        <referenceTo>On_Study_Pathology_Form__c</referenceTo>
        <relationshipLabel>Procedures</relationshipLabel>
        <relationshipName>Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Palpation_guided__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Palpation guided</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Post_Surgery_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Post Surgery Summary</label>
        <referenceTo>Post_Surgaory_Summary__c</referenceTo>
        <relationshipLabel>Procedures</relationshipLabel>
        <relationshipName>Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Procedure_Name__c</fullName>
        <label>Procedure Name</label>
        <picklist>
            <controllingField>Form_Name__c</controllingField>
            <picklistValues>
                <fullName>Fine needle aspirate (breast)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incisional biopsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Breast surgical biopsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-excision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial mastectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FNA (lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excisional biopsy (lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sentinel lymph node dissection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Axillary lymph node dissection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Therapeutic mastectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prophylatic mastectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paracentesis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thoracentesis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FNA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core biopsy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core biopsy (lymph node)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skin Sparing Mastectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Total Skin Sparing Mastectomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modified Radical Mastectomy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stereotactic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stereotactic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Examined_Nodes__c</fullName>
        <label>Total Examined Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Positive__c</fullName>
        <label>Total Positive Nodes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrialPatient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TrialPatient</label>
        <referenceTo>TrialPatient__c</referenceTo>
        <relationshipLabel>Procedures</relationshipLabel>
        <relationshipName>Procedures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ultrasound__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ultrasound</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pg_procedure_id__c</fullName>
        <label>pg_procedure_id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Procedure</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procedures</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>